--- a/src/main/resources/static/logged.html
+++ b/src/main/resources/static/logged.html
@@ -20,6 +20,9 @@
 
     <h1 th:text="${name}"></h1> 
     <h1 th:text="${appName}"></h1> 
+    <script>
+       alert("hello")
+    </script>
     
 </body>
 </html>
