--- a/src/main/resources/static/delete.html
+++ b/src/main/resources/static/delete.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta content="width=device-width, initial-scale=1, shrink-to-fit=no"
+	name="viewport">
 
-<script src="webjars/jquery/1.9.1/jquery.min.js"></script>
-<script src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script type="text/javascript" th:src="@{js/main.js}"></script>
-
-<link href="webjars/bootstrap/3.3.7/css/bootstrap.min.css"
+<!-- Bootstrap CSS -->
+<link crossorigin="anonymous"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 	rel="stylesheet">
-<meta charset="UTF-8">
-<title>Insert title here</title>
+
+<title>Index</title>
 </head>
 <body>
-
-
 	<div class="container">
-
-		<button type="button" class="btn btn-primary btn-lg" id="eButton"
-			data-toggle="modal" data-target="#exampleModal"></button>
-
-
+		<button class="btn btn-success nBtn">New</button>
 		<div class="card">
 			<div class="card-block">
 				<table class="table table-hover">
@@ -37,114 +32,109 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="Users :${data}">
-							<td th:text="${Users.id}"></td>
-							<td th:text="${Users.active}"></td>
-							<td th:text="${Users.email}"></td>
-							<td th:text="${Users.name}"></td>
-							<td th:text="${Users.lastName}"></td>
-							<td th:text="${Users.password}"></td>
-							<!-- <td><a th:href="@{updateUser/(id=${Users.id})}"class="btn btn-primary eBtn" id="Button" data-target="#eButton">Edit</a></td> -->
-							<td><form th:action=@{/updateUser} method="POST">
-									<input type="hidden" name = "id" th:value="${Users.id}" />
-									<button type="submit" value="Submit"
-										class="btn btn-primary eBtn" data-toggle="modal"
-										data-target="#exampleModal">Update</button>
-								</form></td>
-							<td>
-								<!-- <form th:action="@{/deleteUser}" method="post">
-									<input type="hidden" th:value="${Users.id}" />
-									<button type="submit" value="Submit" class="btn btn-danger">Delete</button>
-								</form> -->
-								<td>
-						<form th:action="@{/deleteUser}" method="post">
-							<input type="hidden" name="id" th:value="${Users.id}" /> <input
-								type="submit" value="Delete" class="btn btn-danger" />
-						</form>
-					</td>
-								
-							</td>
+						<tr th:each="users : ${data}">
+							<td th:text="${users.id}"></td>
+							<td th:text="${users.active}"></td>
+							<td th:text="${users.email}"></td>
+							<td th:text="${users.name}"></td>
+							<td th:text="${users.lastName}"></td>
+							<td th:text="${users.password}"></td>
+							<td><a class="btn btn-danger delBtn"
+								th:href="@{delete-user/(id=${users.id})}">Delete</a> <a
+								class="btn btn-primary eBtn"
+								th:href="@{update-user/(id=${users.id})}">Edit</a></td>
 						</tr>
 					</tbody>
 				</table>
-
-
-
+				<hr />
+				<!-- <ul class="nav nav-pills">
+					<li class="nav-item"
+						th:each="i : ${#numbers.sequence(0,data.totalPages-1)}"><a
+						class="nav-link" th:classappend="${currentPage}==${i}?'active':''"
+						th:href="@{/(page=${i})}" th:text="${i}"></a></li>
+				</ul> -->
 			</div>
-
-
 		</div>
-		<form th:action="@{/updateUser}" method="post">
-			<div class="myForm">
-				<div class="modal fade" id="exampleModal" tabindex="-1"
-					role="dialog" aria-labelledby="exampleModalLabel"
-					aria-hidden="true">
+
+		<div class="myForm">
+			<form action="#" method="post" th:action="@{/save}">
+				<div aria-hidden="true" aria-labelledby="exampleModalLabel"
+					class="modal fade" id="exampleModal" role="dialog" tabindex="-1">
 					<div class="modal-dialog" role="document">
 						<div class="modal-content">
 							<div class="modal-header">
 								<h5 class="modal-title" id="exampleModalLabel">Update or
 									Create</h5>
-								<button type="button" class="close" data-dismiss="modal"
-									aria-label="Close">
+								<button aria-label="Close" class="close" data-dismiss="modal"
+									type="button">
 									<span aria-hidden="true">&times;</span>
 								</button>
 							</div>
-						</div>
-						<div class="modal-body">
-
-							<div class="form-group">
-								<label for="text" class="form-control-label">Email</label> <input
-									type="text" class="form-control" id="id" name="id"
-									readonly="readonly" value="" />
+							<div class="modal-body">
+								<div class="form-group">
+									<label class="col-form-label" for="id">ID:</label> <input
+										class="form-control" id="id" name="id" type="text" value="" />
+								</div>
+								<div class="form-group">
+									<label class="col-form-label" for="name">Name:</label> <input
+										class="form-control" id="name" name="name" type="text"
+										value="" />
+								</div>
+								<div class="form-group">
+									<label class="col-form-label" for="capital">Capital:</label> <input
+										class="form-control" id="capital" name="capital" type="text"
+										value="" />
+								</div>
 							</div>
-							<div class="form-group">
-								<label for="text" class="form-control-label">Email</label> <input
-									type="text" class="form-control" id="email" name="email"
-									value="" />
+							<div class="modal-footer">
+								<button class="btn btn-secondary" data-dismiss="modal"
+									type="button">Close</button>
+								<input class="btn btn-primary" type="submit" value="save" />
 							</div>
-							<div class="form-group">
-								<label for="password" class="form-control-label">Password</label>
-								<input type="password" class="form-control" id="password"
-									name="password" value="" />
-							</div>
-							<div class="form-group">
-								<label for="fName" class="form-control-label">First Name</label>
-								<input type="text" class="form-control" id="fName" name="fName"
-									value="" />
-							</div>
-							<div class="form-group">
-								<label for="sName" class="form-control-label">Second
-									Name</label> <input type="text" class="form-control" id="sName"
-									name="sName" value="" />
-							</div>
-							<div class="form-group">
-								<label for="status" class="form-control-label">Status</label> <input
-									type="text" class="form-control" id="status" name="status"
-									value="" />
-							</div>
-
-
-						</div>
-
-						<div class="modal-footer">
-
-							<button type="submit" class="btn btn-secondary"
-								data-dismiss="modal">Close</button>
-
-							<input type="submit" class="btn btn-primary" value="save" />
 						</div>
 					</div>
 				</div>
+			</form>
+		</div>
 
+		<div aria-hidden="true" aria-labelledby="myModalLabel"
+			class="modal fade" id="myModal" role="dialog" tabindex="-1">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="myModalLabel">Delete Record</h5>
+						<button aria-label="Close" class="close" data-dismiss="modal"
+							type="button">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<p class="alert alert-danger">Are you sure you want to delete
+							this country?</p>
+					</div>
+					<div class="modal-footer">
+						<button class="btn btn-secondary" data-dismiss="modal"
+							type="button">Close</button>
+						<a class="btn btn-danger" href="" id="delRef">Delete</a>
+					</div>
+				</div>
 			</div>
-
-		</form>
-
+		</div>
 	</div>
 
-
-
-
-
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+		type="text/javascript"></script>
+	<script crossorigin="anonymous"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		type="text/javascript"></script>
+	<script crossorigin="anonymous"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		type="text/javascript"></script>
+	<script crossorigin="anonymous" src="../static/js/main.js"
+		th:src="@{js/main.js}" type="text/javascript"></script>
 </body>
 </html>
