--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-	<form action="/addUser" method="POST">
+	<form action="/add/user" method="POST">
 
 		<div class="container">
 
