--- a/src/main/resources/static/delete.html
+++ b/src/main/resources/static/delete.html
@@ -51,7 +51,7 @@
 		</div>
 
 		<div class="myForm">
-			<form action="#" method="post" th:action="@{/save-user}">
+			<form action="#" method="post" th:action="@{/save/user}">
 				<div aria-hidden="true" aria-labelledby="exampleModalLabel"
 					class="modal fade" id="exampleModal" role="dialog" tabindex="-1">
 					<div class="modal-dialog" role="document">
