--- a/src/main/resources/static/welcome.html
+++ b/src/main/resources/static/welcome.html
@@ -18,14 +18,14 @@
 				</div>
 			</div>
 		</form>
-		<form action="/delete/user" method="GET">
+		<form action="DeleteUser" method="GET">
 			<div class="form-group">
 				<div class="col-xs-2">
 					<button class="btn" name="Delete" value="Delete">Delete</button>
 				</div>
 			</div>
 		</form>
-		<form action="/daily/tasks" method="GET">
+		<form action="Daily-Tasks" method="GET">
 			<div class="form-group">
 				<div class="col-xs-2">
 					<button class="btn" name="Daily-Tasks" value="Daily-Tasks">Daily
