--- a/src/main/resources/static/welcome.html
+++ b/src/main/resources/static/welcome.html
@@ -33,6 +33,13 @@
 				</div>
 			</div>
 		</form>
+		<form action="logout" method="GET">
+			<div class="form-group">
+				<div class="col-xs-2">
+					<button class="btn" name="Logout" value="logout">Logout</button>
+				</div>
+			</div>
+		</form>
 	</nav>
 
 
