--- a/src/main/resources/static/welcome.html
+++ b/src/main/resources/static/welcome.html
@@ -36,7 +36,7 @@
 		<form action="logout" method="GET">
 			<div class="form-group">
 				<div class="col-xs-2">
-					<button class="btn" name="Logout" value="logout">Logout</button>
+					<button class="btn" name="logout" value="logout">Logout</button>
 				</div>
 			</div>
 		</form>
