Add logging employee logging files

--- a/src/main/resources/static/welcome.html
+++ b/src/main/resources/static/welcome.html
@@ -34,7 +34,7 @@
 			</div>
 		</form>
 		-
-		<form action="logout" method="GET">
+		<form action="logout" method="POST">
 			<div class="form-group">
 				<div class="col-xs-2">
 					<button class="btn" name="logout" value="logout">Logout</button>
