write bad usernames from app

--- a/src/main/resources/static/welcome.html
+++ b/src/main/resources/static/welcome.html
@@ -33,11 +33,19 @@
 				</div>
 			</div>
 		</form>
-		-
+
 		<form action="logout" method="POST">
 			<div class="form-group">
 				<div class="col-xs-2">
 					<button class="btn" name="logout" value="logout">Logout</button>
+				</div>
+			</div>
+		</form>
+		
+		<form action="unwanted/users" method="GET">
+			<div class="form-group">
+				<div class="col-xs-2">
+					<button class="btn" name="Unwanted" value="Unwanted">Unwanted</button>
 				</div>
 			</div>
 		</form>
