Tomcat Config Class and UI file writer

--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -8,8 +8,7 @@
 <link href="webjars/bootstrap/3.3.7/css/bootstrap.min.css"
 	rel="stylesheet">
 <meta charset="UTF-8">
-<meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Add User</title>
 </head>
 <body>
 
