--- a/src/main/resources/static/welcome.html
+++ b/src/main/resources/static/welcome.html
@@ -42,7 +42,7 @@
 			</div>
 		</form>
 		
-		<form action="unwanted/users" method="GET">
+		<form action="unwanted/users" method="POST">
 			<div class="form-group">
 				<div class="col-xs-2">
 					<button class="btn" name="Unwanted" value="Unwanted">Unwanted</button>
