--- a/src/main/resources/static/welcome.html
+++ b/src/main/resources/static/welcome.html
@@ -49,6 +49,14 @@
 				</div>
 			</div>
 		</form>
+		
+		<form action="exit" method="GET">
+			<div class="form-group">
+				<div class="col-xs-2">
+					<button class="btn" name="Exit" value="Exit">Exit</button>
+				</div>
+			</div>
+		</form>
 	</nav>
 
 
